Bug 390473 - Unable to sort package list in Muon by "Installed Size", "Installed Version", "Available Version" (as in Synaptic)
Summary: Unable to sort package list in Muon by "Installed Size", "Installed Version",...
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: muon (other bugs)
Version First Reported In: 5.6
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-14 20:20 UTC by nrbrtx
Modified: 2018-06-19 09:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nrbrtx 2018-02-14 20:20:08 UTC
Steps to reproduce:
1. Install Muon on Ubuntu Zesty, Artful or Bionic.
2. Enable columns "Installed Size", "Installed Version", "Available Version" by right click
3. Click on any column of "Installed Size", "Installed Version", "Available Version" to sort by it.

Expected results:
List gets sorted by corresponding field.

Actual results:
List does not sort by corresponding field.

Downstream bug-report:
https://bugs.launchpad.net/bugs/1716120
Comment 1 Carlo Vanini 2018-06-19 09:15:12 UTC
Git commit c3fe8f7ceb66d33aa24999df5ab0572d10044700 by Carlo Vanini.
Committed on 19/06/2018 at 09:12.
Pushed by vanini into branch 'master'.

enable sorting by version and installed size

Summary:
The list of packages can now be sorted by any column.

Reviewers: sitter

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D13412

M  +2    -2    src/PackageModel/PackageDelegate.cpp
M  +2    -0    src/PackageModel/PackageModel.cpp
M  +3    -2    src/PackageModel/PackageModel.h
M  +10   -0    src/PackageModel/PackageProxyModel.cpp

https://commits.kde.org/muon/c3fe8f7ceb66d33aa24999df5ab0572d10044700