enable sorting by version and installed size

Summary:
The list of packages can now be sorted by any column.

BUG: 390473

Reviewers: sitter

Reviewed By: sitter

Differential Revision: https://phabricator.kde.org/D13412